@@ -1,3 +1,8 @@
+Sun Feb  3 10:25:00 2013  Zachary Scott  <zachary@zacharyscott.net>
+
+	* random.c: Document range argument for Kernel#rand.
+	  [ruby-core:51794] [Bug #7770]
+
 Sun Feb  3 10:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>
 
 	* numeric.c: Document Float constants [ruby-core:51484] [Bug #7709]
